--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "vec_map"
-version = "0.8.0"
+version = "0.9.0"
 authors = ["Alex Crichton <alex@alexcrichton.com>",
            "Jorge Aparicio <japaricious@gmail.com>",
            "Alexis Beingessner <a.beingessner@gmail.com>",
@@ -26,14 +26,14 @@ authors = ["Alex Crichton <alex@alexcrichton.com>",
            "Felix S Klock II <>",
            "Andrew Paseltiner <apaseltiner@gmail.com>",
            "Sean McArthur <sean.monstar@gmail.com>",
-           "Vadim Petrochenkov <>"]
+           "Vadim Petrochenkov <>",
+           "Jonathan Behrens <fintelia@gmail.com>"]
 
 license = "MIT/Apache-2.0"
 description = "A simple map based on a vector for small integer keys"
-repository = "https://github.com/contain-rs/vec-map"
-homepage = "https://github.com/contain-rs/vec-map"
-documentation = "https://contain-rs.github.io/vec-map/vec_map"
-keywords = ["data-structures", "collections", "vecmap", "vec_map", "contain-rs"]
+repository = "https://github.com/fintelia/vec-map"
+homepage = "https://github.com/fintelia/vec-map"
+keywords = ["data-structures", "collections", "vecmap", "vec_map"]
 readme = "README.md"
 
 [features]
